--- a/GPipe.cabal
+++ b/GPipe.cabal
@@ -27,7 +27,7 @@ Library
                     containers  >= 0.4   && <0.6,
                     list-tries  >= 0.4.1 && <0.6,
                     GLUT        >= 2.3.0 && <2.6,
-                    OpenGL      >= 2.5.0 && <2.9,
+                    OpenGL      >= 2.9.2.1,
                     Boolean     >= 0.1.0 && <0.3,
                     Vec         >= 1.0.5 && <2.0,
                     Vec-Boolean >= 1.1.0 && <2.0,
